2013-??-?? : 2.1.0
	all : silent libs compilation by default
	all : installation by default in /usr instead of /usr/local + some rights fixes
	mod_neko/tora : use remote_ip (fixes Apache 2.2 returning 0.0.0.0 in 64 bits ?)
	std : added buffer_get_length
	std : added socket_send_to and socket_recv_from for UDP
	all : increased max codesize from 65K opcodes to 1M
	nekoc : allow break/continue in try/catch
	std : bugfix in utf8_compare
	vm : added $sget16/$sget32/$sgetf/$sgetd, $sset16/$sset32/$ssetf/$ssetd, and $itof/$itod/$ftoi/$dtoi
	vm : bugfix with arrays/strings having length >128MB 
	jit : bugfix on some GCC versions causing invalid array access
	std : fixed escaping of arguments in process_run on Windows
	
2013-02-23 : 2.0.0
	all : changed license to MIT
	mod_neko+mod_tora : fixed issue with get_client_ip in 64 bits mode /gcc
	mysql : added support for timestamp to date conversion
	std : added merge_sort native implementation
	std : added mem_local_size
	regexp : fix in regexp_match, ^ no longer match if pos > 0
	tools : don't abort server on invalid http request
	std : fixed sys_command error code (was <<8 on Linux/OSX)
	nekoc : added -version which adds Loop opcode and ensure correct $array evaluation order
	vm : support for bytecode version and new Loop/MakeArray2 opcodes
	mod_neko/tora : only mix POST with GET params if content-type contains 'urlencoded'
	mysql5 : added charset support check for escape()
	nekoc : fixed bug with switch tables where max >= 256
	neko : int32 is now a first class value
	std : md5 and hashing now takes the int32 value into account
	neko : max array/string size is now 256MB instead of 512MB
	std : date_new("YYYY-MM-DD") now uses localtime instead of UTC (same as Y-M-D H:M:S)
	neko : fixed missing stack for array write in interp mode with invalid index
	neko : added "-version" to print version and exit
	
2011-09-10 : 1.8.2
	vm : use 15 digits (instead of 10) for float display